implement order API, fix API path check, add dummy data
