# swagger/components/schemas.yml
@@ -742,3 +742,117 @@ FavouritePostParam:
   required:
     - jewellery_id
     - is_favourite
+
+OrderStatus:
+  type: string
+  maxLength: 255
+  example: delivered
+  enum:
+    - proceeding
+    - shipped
+    - delivered
+    - returned
+    - cancelled
+AccountOrder:
+  type: object
+  properties:
+    order_id:
+      type: string
+      format: uuid
+      example: 3fa85f64-5717-4562-b3fc-2c963f66afa6
+    account_id:
+      type: string
+      format: uuid
+      example: 3fa85f64-5717-4562-b3fc-2c963f66afa6
+    order_status:
+      $ref: "#/components/schemas/OrderStatus"
+    created_at:
+      type: string
+      format: date-time
+      example: 2020-01-01T00:00:00Z
+    updated_at:
+      type: string
+      format: date-time
+      example: 2020-01-01T00:00:00Z
+    account_order_jewelleries:
+      type: array
+      items:
+        $ref: "#/components/schemas/AccountOrderJewellery"
+    account_order_address:
+      $ref: "#/components/schemas/AccountOrderAddress"
+  required:
+    - order_id
+    - account_id
+    - order_status
+    - created_at
+    - updated_at
+    - account_order_jewelleries
+    - account_order_address
+AccountOrderJewellery:
+  type: object
+  nullable: true
+  properties:
+    order_id:
+      type: string
+      format: uuid
+      example: 3fa85f64-5717-4562-b3fc-2c963f66afa6
+    jewellery_id:
+      type: string
+      format: uuid
+      example: 3fa85f64-5717-4562-b3fc-2c963f66afa6
+    quantity:
+      type: integer
+      format: int
+      example: 100
+    price:
+      type: integer
+      format: int
+      example: 100
+    created_at:
+      type: string
+      format: date-time
+      example: 2020-01-01T00:00:00Z
+    updated_at:
+      type: string
+      format: date-time
+      example: 2020-01-01T00:00:00Z
+  required:
+    - order_id
+    - jewellery_id
+    - quantity
+    - price
+    - created_at
+    - updated_at
+AccountOrderAddress:
+  type: object
+  properties:
+    country_code:
+      type: string
+      maxLength: 2
+      example: JP
+    post_code:
+      type: string
+      example: JP
+    state:
+      type: string
+      example: JP
+    city:
+      type: string
+      example: JP
+    address:
+      type: string
+      example: JP
+    remarks:
+      type: string
+      example: JP
+  required:
+    - country_code
+    - city
+    - address
+OrderPostParam:
+  type: object
+  properties:
+    address:
+      $ref: "#/components/schemas/AccountOrderAddress"
+  required:
+    - address
